# walutomat-rs

./: Cargo.toml  README.md
examples/: depths.rs  main.rs  orderbook.rs  prices.rs  spreads.rs  v1_depths.rs  v1_orderbook.rs  v1_prices.rs  v1_spreads.rs  v2_balance.rs  v2_spreads.rs
src/: lib.rs  v1.rs  v2.rs
