[package]
name = "walutomat"
description = "Walutomat API client"
license = "MIT"
version = "0.1.0"
authors = ["Jacek Pospychala <jacek.pospychala@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.7.0"
sha2 = "0.8.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
